# 5SPARK

./: README.md  create_kafka_topic.sh  docker-compose.yml  init.sql
kafka_streamer/: Dockerfile  pyproject.toml  stream_tweets_to_kafka.py
pyspark/: create_kafka_topic.sh  dockerfile  main.py  pyproject.toml
pyspark_container/: app.py  dockerfile  main.py  mastodon_manager.py  notebook.ipynb  producer.py  pyproject.toml
pyspark_container/source/: all.ipynb  app.py  real_time_data_streaming.ipynb  run_data_visualizations.ipynb  sentiment_analysis.ipynb  store_historical_data.ipynb
